--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,7 @@
 services:
   - type: worker
     name: radio-recorder
-    env: docker
+    env: python
     plan: free
+    buildCommand: pip install -r requirements.txt
+    startCommand: bash start.sh
