--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,9 @@
 services:
   - type: web
-    name: RaRe
+    name: radio-recorder
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: bash start.sh
+
 
